@@ -1,3 +1,11 @@
+2011-09-25 Niels Grewe <niels.grewe@halbordnung.de>
+
+	* Source/DKBoxingUtils.h
+	* Source/DKBoxingUtils.m
+	* Source/DKArgument.m
+	* Source/DKMethod.m:
+	Implement conversion between primitive types.
+
 2011-09-24 Niels Grewe <niels.grewe@halbordnung.de>
 
 	* Source/DKMethod.m
